# zero2prod

./: Cargo.toml  README.md  V02.code-workspace
script/: init_db.sh
src/: configuration.rs  configuration.yaml  lib.rs  main.rs  startup.rs
tests/: health_check.rs
