[package]
name = "ztp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "ztp"

[dev-dependencies]
reqwest = "*"

[dependencies]
actix-web="*"
tokio={version="1",features = ["macros","rt-multi-thread"]}
serde = { version = "1", features = ["derive"]}
config = "0.11"


[dependencies.sqlx]
version="0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]